--- a/dot-file/polybar/config.ini
+++ b/dot-file/polybar/config.ini
@@ -63,7 +63,7 @@ font-2 = "Iosevka Nerd Font:style=Medium:size=18;4"
 font-3 = "Iosevka Nerd Font:size=14;2"
 font-4 = "Noto Sans CJK HK;2"
 
-tray-position = right
+tray-position = none
 tray-detached = false
 tray-maxsize = 16
 tray-background = #002d333f
@@ -71,7 +71,7 @@ tray-offset-x = 0
 tray-offset-y = 0
 tray-padding = 0
 tray-scale = 1.0
-enable-ipc = true
+enable-ipc = none
 
 [module/sep]
 type = custom/text
@@ -118,23 +118,21 @@ wrapping-scroll = false
 reverse-scroll = true
 fuzzy-match = true
 
-ws-icon-0 = 1;
-ws-icon-1 = 2;
-ws-icon-2 = 3;
-ws-icon-3 = 4;
-ws-icon-4 = 5;
-ws-icon-5 = 6;
-ws-icon-6 = 7;
-ws-icon-7 = 8;
-ws-icon-8 = 9;
-ws-icon-9 = 10;
-ws-icon-10 = 11;
-ws-icon-11 = 12;
+ws-icon-0 = 1;1つ
+ws-icon-1 = 2;二
+ws-icon-2 = 3;三つ
+ws-icon-3 = 4;四
+ws-icon-4 = 5;五
+ws-icon-5 = 6;六
+ws-icon-6 = 7;セブン
+ws-icon-7 = 8;八
+ws-icon-8 = 9;九
+
 
 ws-icon-default = ♟
 format = <label-state> <label-mode>
 
-label-focused-font = "Source Code Pro Semibold;2"
+label-focused-font = "Noto Sans"
 
 label-focused = %icon%
 label-focused-foreground = ${colors.foreground}
@@ -214,19 +212,10 @@ interface = wlan1
 
 [module/weather]
 type = custom/script
-exec = ~/.config/polybar/scripts/weather
+exec = ~/.config/polybar/scripts/weather.sh
 interval = 600
 label-background = ${colors.background}
 label-foreground = #eed49f
-
-; [module/mpris]
-; type = custom/script
-; exec = ~/.config/polybar/scripts/player-mpris-tail.py -f '{icon} {artist} - {title}'
-; tail = true
-; click-left = ~/.config/polybar/scripts/player-mpris-tail.py previous &
-; click-right = ~/.config/polybar/scripts/player-mpris-tail.py next &
-; click-middle = ~/.config/polybar/scripts/player-mpris-tail.py play-pause &
-; label-background = ${colors.background}
 
 [module/date]
 type = internal/date
@@ -241,8 +230,6 @@ date-alt = %Y-%m-%d %H:%M:%S
 label = "%date% "
 label-foreground = #91d7e3
 label-background = ${colors.background}
-
-
 
 [settings]
 
