--- a/dot-file/polybar/config.ini
+++ b/dot-file/polybar/config.ini
@@ -19,14 +19,14 @@
 [colors]
 background = #181926 		
 background-alt = #002d333f 	
-foreground = #f5bde6	
+foreground = #f5bde5	
 primary = #81A1C1
 secondary = #8fbcbb
 alert = #ed8796 
 disabled = #eceff4
 
 [bar/main]
-modules-left = right1 arch left1 sep right1 i3 left1 sep right1 weather left1 sep 
+modules-left = right1 cpu left1 sep right1 i3 left1 sep right1 weather left1 sep 
 modules-center = sep right1 title left1 sep
 modules-right = sep right1 pulseaudio left1 sep right1 battery left1 sep right1 date left1
 separator =
@@ -85,13 +85,14 @@ content = "    "
 type = custom/text
 content = " "
 
-[module/arch]
-type = custom/text
-content-background = ${colors.background}
-content-foreground = #f5bde6,
-content = "%{T4} "
-click-right = conky -c ~/.config/conky/macchiato.conf 
-click-left = ~/rofi-nord/powermenu.sh 
+[module/cpu]
+type = internal/cpu
+interval = 1
+format = <label>
+format-prefix = "%{T4} "
+format-prefix-foreground = ${colors.foreground}
+label = " %percentage%%"
+format-background = ${colors.background}
 
 [module/left1]
 type = custom/text
@@ -130,7 +131,7 @@ ws-icon-8 = 9;九
 
 
 ws-icon-default = ♟
-format = <label-state> <label-mode>
+format = <label-state> <label-mode> 
 
 label-focused-font = "Noto Sans"
 
@@ -230,6 +231,7 @@ date-alt = %Y-%m-%d %H:%M:%S
 label = "%date% "
 label-foreground = #91d7e3
 label-background = ${colors.background}
+
 
 [settings]
 
